<resources>
    <string name="app_name">Start Demo</string>
    <string name="dinamico">Dinámico</string>
    <string name="btn_add_cart">Añadir al carro</string>
    <string name="select_meat">Selecciona tu carne o burger</string>
    <string name="dinamico_ingre">Ingredientes: Tomate, chucrut, palta y mayo</string>
    <string name="pan_frica">Pan Frica</string>
    <string name="precioDinamicoLomo">$7.800</string>
    <string name="cat_txt">Categorias</string>
    <string name="pedido_txt">Detalles del pedido</string>
    <string name="travagante_titulo">Travagante</string>
    <string name="back_text">&lt;</string>
</resources>