<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetalleProducto">

    <TextView
            android:text="@string/dinamico"
            android:layout_width="152dp"
            android:layout_height="46dp"
            android:id="@+id/textView"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:textColor="#1C1C1C"
            android:fontFamily="sans-serif"
            android:typeface="normal"
            android:lineSpacingExtra="8sp" />

    <Button
            android:text="@string/btn_add_cart"
            android:layout_width="292dp"
            android:layout_height="56dp"
            android:id="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="12dp"
            app:layout_constraintHorizontal_bias="0.495" />

    <TextView
            android:text="@string/dinamico_ingre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:textColor="#B8B8B8" />

    <ImageView
            android:src="@drawable/dinamicotrans"
            android:layout_width="259dp"
            android:layout_height="211dp"
            android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/dinamico"
            app:layout_constraintHorizontal_bias="0.496"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
            android:text="@string/select_meat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
            android:src="@drawable/lomolisorounderd"
            android:layout_width="140dp"
            android:layout_height="161dp"
            android:id="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp" />

    <ImageView
            android:src="@drawable/mechadarounded"
            android:layout_width="140dp"
            android:layout_height="160dp"
            android:id="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4" />

    <TextView
            android:text="@string/back_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            android:textSize="34sp"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            android:layout_marginEnd="60dp"
            app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>