<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:exported="true"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CarroCompra">

    <Button
            android:text="Hacer Pedido"
            android:layout_width="214dp"
            android:layout_height="48dp"
            android:id="@+id/button2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp" />

    <TextView
            android:text="Total: $19.590"
            android:layout_width="179dp"
            android:layout_height="38dp"
            android:id="@+id/textView37"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/scrollView2">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/pedido_txt"
                    android:layout_width="223dp"
                    android:layout_height="24dp"
                    android:id="@+id/textView2"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.081" />

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    android:layout_marginTop="36dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintHorizontal_bias="1.0"
                    android:id="@+id/cardView14">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:text="@string/travagante_titulo"
                            android:layout_width="265dp"
                            android:layout_height="25dp"
                            android:id="@+id/textView40"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            app:layout_constraintStart_toStartOf="@+id/textView43" />

                    <ImageView
                            android:layout_width="131dp"
                            android:layout_height="116dp"
                            app:srcCompat="@drawable/travagante"
                            android:id="@+id/imageView40"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/textView40"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginBottom="1dp" />

                    <TextView
                            android:text="$18.990"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView45"
                            android:textAlignment="textEnd"
                            android:textSize="24sp"
                            app:layout_constraintStart_toEndOf="@+id/imageView40"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.99"
                            app:layout_constraintTop_toBottomOf="@+id/textView43"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintVertical_bias="0.9" />

                    <TextView
                            android:text="Sandwich - Lomo Liso - Pan Frica"
                            android:layout_width="259dp"
                            android:layout_height="50dp"
                            android:id="@+id/textView43"
                            android:textAlignment="center"
                            app:layout_constraintTop_toBottomOf="@+id/textView40"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView40" />

                    <TextView
                            android:text="Cantidad: 2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView42"
                            app:layout_constraintStart_toEndOf="@+id/imageView40"
                            app:layout_constraintEnd_toStartOf="@+id/textView45"
                            app:layout_constraintHorizontal_bias="0.02"
                            app:layout_constraintTop_toBottomOf="@+id/textView43"
                            android:layout_marginTop="20dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/cardView14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintHorizontal_bias="1.0"
                    android:layout_marginTop="20dp"
                    android:id="@+id/cardView15">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:text="@string/dinamico"
                            android:layout_width="265dp"
                            android:layout_height="25dp"
                            android:id="@+id/textView3"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/textView19"
                            app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                            android:layout_width="131dp"
                            android:layout_height="116dp"
                            app:srcCompat="@drawable/dinamico"
                            android:id="@+id/imageView31"
                            tools:srcCompat="@drawable/dinamico"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/textView3"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginBottom="1dp" />

                    <TextView
                            android:text="Cantidad: 1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView20"
                            android:layout_marginStart="1dp"
                            app:layout_constraintStart_toEndOf="@+id/imageView31"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginBottom="3dp" />

                    <TextView
                            android:text="$7.6000"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView39"
                            android:textAlignment="textEnd"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                            android:text="Sandwich -Mechada - Pan Marraqueta"
                            android:layout_width="259dp"
                            android:layout_height="50dp"
                            android:id="@+id/textView19"
                            android:textAlignment="center"
                            app:layout_constraintTop_toBottomOf="@+id/textView3"
                            android:layout_marginStart="1dp"
                            app:layout_constraintStart_toEndOf="@+id/imageView31"
                            android:layout_marginEnd="2dp"
                            app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <Button
                    android:text="Agregar más productos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button3"
                    app:layout_constraintTop_toBottomOf="@+id/cardView15"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_marginTop="10dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>